Report Section API's added